WIP - migration to Spring Boot 3, Java 17 etc.